@@ -26,6 +26,9 @@ UTILITIES
 
     o add `summary.SeqUnitListClass()`
 
+    o enable the BGZF-format output from `seqGDS2VCF()` on Windows
+      (using Rsamtools)
+
 BUG FIXES
 
     o `seqUnitApply()` works correctly with selected samples if 'parallel' is
@@ -35,6 +38,8 @@ BUG FIXES
        white space
 
     o `seqGDS2BED()` with selected samples for sex and phenotype information
+
+    o buf fix in `seqGDS2VCF()` if there is no integer genotype
 
 
 CHANGES IN VERSION 1.32.0
